chore: Add Checkstyle, PMD, SpotBugs